<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/mrg20"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/Ln_Login"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/boss"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/Ln_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_firnam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_lasnam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_emreg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="16"
            app:counterEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_phone"
                android:inputType="phone"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_pasreg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_retpasreg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retype_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_ml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/male"
                android:textSize="@dimen/mrg20" />

            <RadioButton
                android:id="@+id/rb_fml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="@dimen/mrg20" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spin_reggis"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/mrg20" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Ln_Login"
        android:layout_marginTop="@dimen/mrg10"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_alred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signup"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/mrg20"
        android:layout_marginTop="10dp"
        android:text="Already have an account?"
        android:textSize="@dimen/mrg20" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signup"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/tv_alred"
        android:background="@color/transparant"
        android:text="@string/login_now"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="@dimen/mrg20"
        android:layout_marginLeft="10dp"
        tools:ignore="SpUsage"
        android:layout_toEndOf="@id/tv_alred" />

</RelativeLayout>